<resources>
    <string name="app_name">Pilz Scanning Tool</string>
    <string name="retrieve_code">Retrieve Code</string>
    <string name="code_found_below_edit_if_neccessary">Code found below. Edit if neccessary.</string>
    <string name="edit">Edit</string>
    <string name="send_to_server">Send to Server</string>
    <string name="go_back">Go Back</string>
    <string name="title_activity_barcode">BarcodeActivity</string>
    <string name="crop_from_gallery">\@string/crop_from_gallery</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="scan_error_code">Scan Error Code</string>
    <string name="error_codes_from_gallery">Error codes from gallery</string>
    <string name="device_type">Device Type:</string>
    <string name="error_code_below">Error Code Below</string>
    <string name="camera">Camera</string>
    <string name="device_id">Device ID:</string>
</resources>
